; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/gpu/drm/i915/extr_intel_display.c_intel_crtc_mode_get.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/gpu/drm/i915/extr_intel_display.c_intel_crtc_mode_get.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.drm_display_mode = type { i32, i32, i32, i32, i32, i32, i32, i32, i32 }
%struct.drm_device = type { %struct.drm_i915_private* }
%struct.drm_i915_private = type { i32 }
%struct.drm_crtc = type { i32 }
%struct.intel_crtc = type { i32 }

@GFP_KERNEL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.drm_display_mode* @intel_crtc_mode_get(%struct.drm_device* %0, %struct.drm_crtc* %1) #0 {
  %3 = alloca %struct.drm_display_mode*, align 8
  %4 = alloca %struct.drm_device*, align 8
  %5 = alloca %struct.drm_crtc*, align 8
  %6 = alloca %struct.drm_i915_private*, align 8
  %7 = alloca %struct.intel_crtc*, align 8
  %8 = alloca i32, align 4
  %9 = alloca %struct.drm_display_mode*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  store %struct.drm_device* %0, %struct.drm_device** %4, align 8
  store %struct.drm_crtc* %1, %struct.drm_crtc** %5, align 8
  %14 = load %struct.drm_device*, %struct.drm_device** %4, align 8
  %15 = getelementptr inbounds %struct.drm_device, %struct.drm_device* %14, i32 0, i32 0
  %16 = load %struct.drm_i915_private*, %struct.drm_i915_private** %15, align 8
  store %struct.drm_i915_private* %16, %struct.drm_i915_private** %6, align 8
  %17 = load %struct.drm_crtc*, %struct.drm_crtc** %5, align 8
  %18 = call %struct.intel_crtc* @to_intel_crtc(%struct.drm_crtc* %17)
  store %struct.intel_crtc* %18, %struct.intel_crtc** %7, align 8
  %19 = load %struct.intel_crtc*, %struct.intel_crtc** %7, align 8
  %20 = getelementptr inbounds %struct.intel_crtc, %struct.intel_crtc* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 4
  store i32 %21, i32* %8, align 4
  %22 = load i32, i32* %8, align 4
  %23 = call i32 @HTOTAL(i32 %22)
  %24 = call i32 @I915_READ(i32 %23)
  store i32 %24, i32* %10, align 4
  %25 = load i32, i32* %8, align 4
  %26 = call i32 @HSYNC(i32 %25)
  %27 = call i32 @I915_READ(i32 %26)
  store i32 %27, i32* %11, align 4
  %28 = load i32, i32* %8, align 4
  %29 = call i32 @VTOTAL(i32 %28)
  %30 = call i32 @I915_READ(i32 %29)
  store i32 %30, i32* %12, align 4
  %31 = load i32, i32* %8, align 4
  %32 = call i32 @VSYNC(i32 %31)
  %33 = call i32 @I915_READ(i32 %32)
  store i32 %33, i32* %13, align 4
  %34 = load i32, i32* @GFP_KERNEL, align 4
  %35 = call %struct.drm_display_mode* @kzalloc(i32 36, i32 %34)
  store %struct.drm_display_mode* %35, %struct.drm_display_mode** %9, align 8
  %36 = load %struct.drm_display_mode*, %struct.drm_display_mode** %9, align 8
  %37 = icmp ne %struct.drm_display_mode* %36, null
  br i1 %37, label %39, label %38

38:                                               ; preds = %2
  store %struct.drm_display_mode* null, %struct.drm_display_mode** %3, align 8
  br label %92

39:                                               ; preds = %2
  %40 = load %struct.drm_device*, %struct.drm_device** %4, align 8
  %41 = load %struct.drm_crtc*, %struct.drm_crtc** %5, align 8
  %42 = call i32 @intel_crtc_clock_get(%struct.drm_device* %40, %struct.drm_crtc* %41)
  %43 = load %struct.drm_display_mode*, %struct.drm_display_mode** %9, align 8
  %44 = getelementptr inbounds %struct.drm_display_mode, %struct.drm_display_mode* %43, i32 0, i32 8
  store i32 %42, i32* %44, align 4
  %45 = load i32, i32* %10, align 4
  %46 = and i32 %45, 65535
  %47 = add nsw i32 %46, 1
  %48 = load %struct.drm_display_mode*, %struct.drm_display_mode** %9, align 8
  %49 = getelementptr inbounds %struct.drm_display_mode, %struct.drm_display_mode* %48, i32 0, i32 0
  store i32 %47, i32* %49, align 4
  %50 = load i32, i32* %10, align 4
  %51 = and i32 %50, -65536
  %52 = lshr i32 %51, 16
  %53 = add i32 %52, 1
  %54 = load %struct.drm_display_mode*, %struct.drm_display_mode** %9, align 8
  %55 = getelementptr inbounds %struct.drm_display_mode, %struct.drm_display_mode* %54, i32 0, i32 1
  store i32 %53, i32* %55, align 4
  %56 = load i32, i32* %11, align 4
  %57 = and i32 %56, 65535
  %58 = add nsw i32 %57, 1
  %59 = load %struct.drm_display_mode*, %struct.drm_display_mode** %9, align 8
  %60 = getelementptr inbounds %struct.drm_display_mode, %struct.drm_display_mode* %59, i32 0, i32 2
  store i32 %58, i32* %60, align 4
  %61 = load i32, i32* %11, align 4
  %62 = and i32 %61, -65536
  %63 = lshr i32 %62, 16
  %64 = add i32 %63, 1
  %65 = load %struct.drm_display_mode*, %struct.drm_display_mode** %9, align 8
  %66 = getelementptr inbounds %struct.drm_display_mode, %struct.drm_display_mode* %65, i32 0, i32 3
  store i32 %64, i32* %66, align 4
  %67 = load i32, i32* %12, align 4
  %68 = and i32 %67, 65535
  %69 = add nsw i32 %68, 1
  %70 = load %struct.drm_display_mode*, %struct.drm_display_mode** %9, align 8
  %71 = getelementptr inbounds %struct.drm_display_mode, %struct.drm_display_mode* %70, i32 0, i32 4
  store i32 %69, i32* %71, align 4
  %72 = load i32, i32* %12, align 4
  %73 = and i32 %72, -65536
  %74 = lshr i32 %73, 16
  %75 = add i32 %74, 1
  %76 = load %struct.drm_display_mode*, %struct.drm_display_mode** %9, align 8
  %77 = getelementptr inbounds %struct.drm_display_mode, %struct.drm_display_mode* %76, i32 0, i32 5
  store i32 %75, i32* %77, align 4
  %78 = load i32, i32* %13, align 4
  %79 = and i32 %78, 65535
  %80 = add nsw i32 %79, 1
  %81 = load %struct.drm_display_mode*, %struct.drm_display_mode** %9, align 8
  %82 = getelementptr inbounds %struct.drm_display_mode, %struct.drm_display_mode* %81, i32 0, i32 6
  store i32 %80, i32* %82, align 4
  %83 = load i32, i32* %13, align 4
  %84 = and i32 %83, -65536
  %85 = lshr i32 %84, 16
  %86 = add i32 %85, 1
  %87 = load %struct.drm_display_mode*, %struct.drm_display_mode** %9, align 8
  %88 = getelementptr inbounds %struct.drm_display_mode, %struct.drm_display_mode* %87, i32 0, i32 7
  store i32 %86, i32* %88, align 4
  %89 = load %struct.drm_display_mode*, %struct.drm_display_mode** %9, align 8
  %90 = call i32 @drm_mode_set_name(%struct.drm_display_mode* %89)
  %91 = load %struct.drm_display_mode*, %struct.drm_display_mode** %9, align 8
  store %struct.drm_display_mode* %91, %struct.drm_display_mode** %3, align 8
  br label %92

92:                                               ; preds = %39, %38
  %93 = load %struct.drm_display_mode*, %struct.drm_display_mode** %3, align 8
  ret %struct.drm_display_mode* %93
}

declare dso_local %struct.intel_crtc* @to_intel_crtc(%struct.drm_crtc*) #1

declare dso_local i32 @I915_READ(i32) #1

declare dso_local i32 @HTOTAL(i32) #1

declare dso_local i32 @HSYNC(i32) #1

declare dso_local i32 @VTOTAL(i32) #1

declare dso_local i32 @VSYNC(i32) #1

declare dso_local %struct.drm_display_mode* @kzalloc(i32, i32) #1

declare dso_local i32 @intel_crtc_clock_get(%struct.drm_device*, %struct.drm_crtc*) #1

declare dso_local i32 @drm_mode_set_name(%struct.drm_display_mode*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
